Updating snippets page

--- a/content/pages/snippets/snippets.mdx
+++ b/content/pages/snippets/snippets.mdx
@@ -7,4 +7,59 @@ cover:
   url: https://vecteezy.com/vector-art/190741-ultra-violet-galactic-background-free-vector
 ---
 
-Snippets data
+
+import styled from 'styled-components'
+import { Snippets, LargeText } from 'components/styles'
+import { Sass } from 'styled-icons/fa-brands/'
+import { Css3 } from 'styled-icons/boxicons-logos/'
+import { Html5 } from 'styled-icons/boxicons-logos/'
+import { Calendar } from 'styled-icons/bootstrap'
+import { ArrowheadRightOutline } from 'styled-icons/evaicons-outline'
+
+
+
+<LargeText>Accessible ready to use code, just copy and paste in your codebase.</LargeText>
+
+<Snippets>
+  <div className="snippets__icon">
+  <a href="/snippets/custom-checkbox" className="fill-box"><Sass className="snippets__icon-image" /><span className="sr-only">SASS</span></a>
+  </div>
+  <div className="snippets__description">
+  <div className="snippets__date"><Calendar size="1.4rem" />&ensp;November 22, 2019</div>
+  <h2>Custom Checkbox</h2>
+  <p>Get ever-closer to pixel-perfection with this handy pixel-tweaking React component.</p>
+  </div>
+  <div className="snippets__action">
+    <a href="/snippets/custom-checkbox" className="read-more">View Detail <ArrowheadRightOutline size="1.6rem" /></a>
+  </div>
+</Snippets>
+
+<Snippets>
+  <div className="snippets__icon">
+  <a href="#" className="fill-box"><Css3 className="snippets__icon-image" /><span className="sr-only">SASS</span></a>
+  </div>
+  <div className="snippets__description">
+  <div className="snippets__date"><Calendar size="1.4rem" />&ensp;November 22, 2019</div>
+  <h2>Custom Checkbox</h2>
+  <p>Get ever-closer to pixel-perfection with this handy pixel-tweaking React component.</p>
+  </div>
+  <div className="snippets__action">
+    <a href="#" className="read-more">View Detail <ArrowheadRightOutline size="1.6rem" /></a>
+  </div>
+</Snippets>
+
+<Snippets>
+  <div className="snippets__icon">
+  <a href="#" className="fill-box"><Html5 className="snippets__icon-image" /><span className="sr-only">SASS</span></a>
+  </div>
+  <div className="snippets__description">
+  <div className="snippets__date"><Calendar size="1.4rem" />&ensp;November 22, 2019</div>
+  <h2>Custom Checkbox</h2>
+  <p>Get ever-closer to pixel-perfection with this handy pixel-tweaking React component.</p>
+  </div>
+  <div className="snippets__action">
+    <a href="#" className="read-more">View Detail <ArrowheadRightOutline size="1.6rem" /></a>
+  </div>
+</Snippets>
+
+Happy coding!
