Updating snippets page

--- a/content/pages/snippets/snippets.mdx
+++ b/content/pages/snippets/snippets.mdx
@@ -22,6 +22,20 @@ import { ArrowheadRightOutline } from 'styled-icons/evaicons-outline'
 
 <Snippets>
   <div className="snippets__icon">
+  <a href="/snippets/sass-mixins-for-loop" className="fill-box"><Css3 className="snippets__icon-image" /><span className="sr-only">SASS</span></a>
+  </div>
+  <div className="snippets__description">
+  <div className="snippets__date"><Calendar size="1.4rem" />&ensp;November 22, 2019</div>
+  <h2>SASS Mixins - for loop</h2>
+  <p>Get ever-closer to pixel-perfection with this handy pixel-tweaking React component.</p>
+  </div>
+  <div className="snippets__action">
+    <a href="/snippets/sass-mixins-for-loop" className="read-more">View Detail <ArrowheadRightOutline size="1.6rem" /></a>
+  </div>
+</Snippets>
+
+<Snippets>
+  <div className="snippets__icon">
   <a href="/snippets/custom-checkbox" className="fill-box"><Sass className="snippets__icon-image" /><span className="sr-only">SASS</span></a>
   </div>
   <div className="snippets__description">
@@ -34,19 +48,6 @@ import { ArrowheadRightOutline } from 'styled-icons/evaicons-outline'
   </div>
 </Snippets>
 
-<Snippets>
-  <div className="snippets__icon">
-  <a href="#" className="fill-box"><Css3 className="snippets__icon-image" /><span className="sr-only">SASS</span></a>
-  </div>
-  <div className="snippets__description">
-  <div className="snippets__date"><Calendar size="1.4rem" />&ensp;November 22, 2019</div>
-  <h2>Custom Checkbox</h2>
-  <p>Get ever-closer to pixel-perfection with this handy pixel-tweaking React component.</p>
-  </div>
-  <div className="snippets__action">
-    <a href="#" className="read-more">View Detail <ArrowheadRightOutline size="1.6rem" /></a>
-  </div>
-</Snippets>
 
 <Snippets>
   <div className="snippets__icon">
