--- a/content/posts/2019-11-04~css-grid-accessibility/css-grid-accessibility.mdx
+++ b/content/posts/2019-11-04~css-grid-accessibility/css-grid-accessibility.mdx
@@ -4,6 +4,8 @@ slug: /css-grid-accessibility
 date: 2019-11-04
 cover:
   img: grid.svg
+  source: Vecteezy
+  url: https://www.vecteezy.com/vector-art/273771-flat-orange-abstract-vector-background
 tags:
   - CSS Grid
   - Accessibility
