Adding twitter card

--- a/content/posts/2020-01-05~twitter-cards/twitter-card.mdx
+++ b/content/posts/2020-01-05~twitter-cards/twitter-card.mdx
@@ -1,14 +1,12 @@
 ---
-title: CSS Grid and Accessibility
-slug: /css-grid-accessibility/
-date: 2019-11-04
+title: "Twitter Cards"
+tags: ["Example", "Placeholder"]
+slug: /twitter-cards/
+date: 2020-11-04
 cover:
   img: grid.svg
   source: Vecteezy
   url: https://www.vecteezy.com/vector-art/273771-flat-orange-abstract-vector-background
-tags:
-  - CSS Grid
-  - Accessibility
 showToc: true
 ---
 
