Updating css-in-js post

--- a/content/posts/2020-06-05~css-in-js/twitter-card.mdx
+++ b/content/posts/2020-06-05~css-in-js/twitter-card.mdx
@@ -10,83 +10,29 @@ cover:
 showToc: true
 ---
 
-What is CSS-in-Js? What challenges it poses to developers? But before we get started let's not forget that CSS is awesome, and it’s easy to get started with. So why we need to write CSS in Javascript and how to do it.
+What is CSS-in-Js? What challenges it poses to developers? But before we get started let's not forget that CSS is awesome, and it’s easy to get started with.
+So why we need to write CSS in Javascript and how to do it.
 
-But front-end applications have been scaling at a massive, and complex rate that I don’t believe the current CSS architecture is designed for the job.
+CSS-in-JS bridges the gap between CSS and JavaScript, it doesn't meant to destroy everything you love about CSS. My opinion is, it can make authoring CSS far more enjoyable, and I'd encourage you to give it a shot.
 
-I still believe that the current CSS architecture has a place in this crazy world for small sites, and even small applications.
+## Why CSS-in-JS
 
-While it solves complex layout design and opens new path for implementing any sort of design layouts across devices (laptop, large desktop, tablet, phone, phablet etc...). But at the same time incorrect implementation leads to accessibility issues for keyboard users and screen readers. Let's dive straight into it.
+Web applications have been scaling at a massive and complex rate, and they are Javascript heavy, just look at React ecosystem.
+You can still write regular CSS, you can use CSS Preprocessor like SASS, you can use CSS Modules etc. All these methodolgies are sufficient in styling your React applications.
+These methodolgies works perfect when you have to work on static site like marketing website, microsite or small projects.
 
-## Visual vs. Logical Reordering
+CSS-in-JS goes one step ahead and solve numerous problems which above methodolgies can pose in developing dynamic web applications. It eliminates problems such as:
+  * Global namespace
+  * Style dependencies
+  * Dead code elimination
+  * Composition of styles
+  * Sharing constants
 
-While CSS Grid enables reordering of content in various ways, but it should only be used for visual, not logical reordering of content. Here is an example of simple grid consist of 2 rows and 3 columns, both have common markup but different output based on styling:
+## How it works
+CSS-in-JS is an approach where styles are written in JavaScript instead of in external CSS files to easily scope styles in components, eliminate dead code, encourage faster performance and dynamic styling, and more.
 
-* First one is correct order of grid
-* While second is tweaked with grid-row property
+ * CSS-in-JS allows you to write CSS in JavaScript syntax
+ * It takes advantage of native JS syntax features
+ * Colocate styles with components
 
-> These columns have link, so visually user will see **4th link in 1st row**, but screen readers and keyboard user will encounter problem, as tabbing will jump to **3rd link in 2nd row** then back to **4th link on 1st row**.
-
-### Solution
-
-Well solution is simple and elegant, just move 4th link in markup after 2nd and it will not be an issue any more. Below you can see code in action as well:
-
-### Codesandbox
-
-https://codesandbox.io/s/css-grid-ck85m?codemirror=1
-
-## Flat markup vs. Semantic markup
-
-Well CSS Grid solves lot of problems, but one should be extra careful while writing markup. To create a grid all items should be direct child of container, any items which are not direct child will not inherit `display: grid` property.
-
-So what happens next is, when some developer wants to create grid structure there may need arise to flatten out markup for whatever reason but it will break semantic meaning of layout and leads to accessibility issues. Let's take a classic example of **header** layout consist of **logo and navigation** links.
-
-Below are the sample code snippets of flatten markup and semantic markup
-
-### Code Snippets
-
-``` HTML:title=Flatten-Markup
-  <header class="grid-container">
-    <a href="#" class="logo">
-      <img src="https://logoipsum.com/logo/logo-10.svg">
-    </a>
-    <a href="#" class="nav-link">Home</a>
-    <a href="#" class="nav-link">About</a>
-    <a href="#" class="nav-link">Services</a>
-    <a href="#" class="nav-link">Contact</a>
-  </header>
-```
-
-### Lost semantic
-
-Here comes the real issue with flatten markup and it will cause huge inconvenience to screen reader users, as there is no to communicate presence of navigation in it. It will announce flat links in header.
-
-### The correct approach
-
-Using right semantic structure, we can achieve desired output as well as make things easier for screen reader users. Below markup in snippet is slightly different from above with right native HTML tags. Now screen reader will announce navigation with multiple list items of links.
-
-
-``` HTML:title=Semantic-Markup
-  <header class="grid-container grid-container-semantic
-  grid-container--three">
-    <a href="#" class="logo">
-      <img src="https://logoipsum.com/logo/logo-10.svg">
-    </a>
-    <nav class="top-nav top-nav--semantic">
-      <ul>
-        <li><a href="#" class="nav-link">Home</a></li>
-        <li><a href="#" class="nav-link">About</a></li>
-        <li><a href="#" class="nav-link">Services</a></li>
-        <li><a href="#" class="nav-link">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-```
-
-You can see how both markup are slightly different, but desired output can be achieved using CSS Grid. See it in action:
-
-### Codesandbox
-
-https://codesandbox.io/s/css-grid-faltten-19s7d
-
-> So, note to self always use semantic markup over flatten markup, though later one saves your time or say it will double your work, once you think of accessibility and decides to re-write it.
+ To get started i would recommend **<a href="https://styled-components.com/" target="_blank" rel="noopener noreferrer nofollow">Styled Components</a>
