Updating css-in-js post

--- a/content/posts/2020-06-05~css-in-js/twitter-card.mdx
+++ b/content/posts/2020-06-05~css-in-js/twitter-card.mdx
@@ -30,7 +30,7 @@ CSS-in-JS goes one step ahead and solve numerous problems which above methodolgi
 
 ## How it works
 CSS-in-JS is an approach where styles are written in JavaScript instead of in external CSS files to easily scope styles in components, eliminate dead code, encourage faster performance and dynamic styling, and more.
-
+Here are key features:
  * CSS-in-JS allows you to write CSS in JavaScript syntax
  * It takes advantage of native JS syntax features
  * Colocate styles with components
