--- a/content/posts/2020-06-05~css-in-js/css-in-js.mdx
+++ b/content/posts/2020-06-05~css-in-js/css-in-js.mdx
@@ -35,4 +35,12 @@ Here are key features:
  * It takes advantage of native JS syntax features
  * Colocate styles with components
 
- To get started i would recommend **<a href="https://styled-components.com/" target="_blank" rel="noopener noreferrer nofollow">Styled Components</a>
+ To get started I would recommend **<a href="https://styled-components.com/" target="_blank" rel="noopener noreferrer nofollow">Styled Components</a>**
+
+ ## Learn CSS before CSS-in-JS
+
+Well CSS-in-JS is awesome in it's own way, you still need to learn CSS fundamentals as it does not teach you how CSS works in DOM.
+Here are key points to learn:
+  * How CSS properties work
+  * How inheritance works
+  * How CSS layout works
