Updating css-in-js post

--- a/content/posts/2020-06-05~css-in-js/css-in-js.mdx
+++ b/content/posts/2020-06-05~css-in-js/css-in-js.mdx
@@ -35,7 +35,7 @@ Here are key features:
  * It takes advantage of native JS syntax features
  * Colocate styles with components
 
- To get started I would recommend **<a href="https://styled-components.com/" target="_blank" rel="noopener noreferrer nofollow">Styled Components</a>**
+ > To get started I would recommend **<a href="https://styled-components.com/" target="_blank" rel="noopener noreferrer nofollow">Styled Components</a>**
 
 ## Learn CSS before CSS-in-JS
 
@@ -52,7 +52,7 @@ Here are key points to learn:
  * Unit testing is far easier with CSS-in-JS
  * Performance improvements like critical CSS with no additional setup needed
 
- Having said that if you are familiar with JavaScript CSS-in-JS helps remove the need to use native CSS syntax and this can make styling an application more accessible because there are fewer new things to learn.
+ > Having said that if you are familiar with JavaScript CSS-in-JS helps remove the need to use native CSS syntax and this can make styling an application more accessible because there are fewer new things to learn.
  On other side of coin if you are less familiar with JavaScript your learning curve will increase but it's not very difficult and it will only enhance your knowledge.
 
  Happy Learning!
