Updating css-in-js post

--- a/content/posts/2020-06-05~css-in-js/css-in-js.mdx
+++ b/content/posts/2020-06-05~css-in-js/css-in-js.mdx
@@ -1,6 +1,8 @@
 ---
 title: "How to get started with CSS-in-JS"
-tags: ["CSS-in-JS"]
+tags:
+  - CSS-in-JS
+  - CSS Architecture
 slug: /how-to-get-started-with-css-in-js/
 date: 2020-06-04
 cover:
@@ -31,9 +33,9 @@ CSS-in-JS goes one step ahead and solve numerous problems which above methodolgi
 ## How it works
 CSS-in-JS is an approach where styles are written in JavaScript instead of in external CSS files to easily scope styles in components, eliminate dead code, encourage faster performance and dynamic styling, and more.
 Here are key features:
- * CSS-in-JS allows you to write CSS in JavaScript syntax
- * It takes advantage of native JS syntax features
- * Colocate styles with components
+  * CSS-in-JS allows you to write CSS in JavaScript syntax
+  * It takes advantage of native JS syntax features
+  * Colocate styles with components
 
  > To get started I would recommend **<a href="https://styled-components.com/" target="_blank" rel="noopener noreferrer nofollow">Styled Components</a>**
 
@@ -46,11 +48,11 @@ Here are key points to learn:
   * How CSS layout works
 
 ## Other Advantages of CSS-in-JS
- * Easy to pre-render important CSS
- * Supports dynamic styling
- * Styles are generally "scoped" to a specific component
- * Unit testing is far easier with CSS-in-JS
- * Performance improvements like critical CSS with no additional setup needed
+  * Easy to pre-render important CSS
+  * Supports dynamic styling
+  * Styles are generally "scoped" to a specific component
+  * Unit testing is far easier with CSS-in-JS
+  * Performance improvements like critical CSS with no additional setup needed
 
  > Having said that if you are familiar with JavaScript CSS-in-JS helps remove the need to use native CSS syntax and this can make styling an application more accessible because there are fewer new things to learn.
  On other side of coin if you are less familiar with JavaScript your learning curve will increase but it's not very difficult and it will only enhance your knowledge.
