Updating css-in-js post

--- a/content/posts/2020-06-05~css-in-js/css-in-js.mdx
+++ b/content/posts/2020-06-05~css-in-js/css-in-js.mdx
@@ -1,14 +1,14 @@
 ---
-title: "How to get started with CSS-in-JS"
-tags:
-  - CSS-in-JS
-  - CSS Architecture
+title: How to get started with CSS-in-JS
 slug: /how-to-get-started-with-css-in-js/
 date: 2020-06-04
 cover:
   img: css-in-js.svg
   source: Vecteezy
   url: https://www.vecteezy.com/vector-art/194930-abstract-modern-banner-theme-frame-background
+tags:
+  - CSS-in-JS
+  - CSS Architecture
 showToc: true
 ---
 
