Updating css-in-js post

--- a/content/posts/2020-06-05~css-in-js/css-in-js.mdx
+++ b/content/posts/2020-06-05~css-in-js/css-in-js.mdx
@@ -5,7 +5,7 @@ date: 2020-06-04
 cover:
   img: css-in-js.svg
   source: Vecteezy
-  url: https://www.vecteezy.com/vector-art/194930-abstract-modern-banner-theme-frame-background
+  url: https://www.vecteezy.com/vector-art/225429-vector-memphis-background-illustration
 tags:
   - CSS-in-JS
   - CSS Architecture
@@ -32,7 +32,14 @@ CSS-in-JS goes one step ahead and solve numerous problems which above methodolgi
 
 ## How it works
 CSS-in-JS is an approach where styles are written in JavaScript instead of in external CSS files to easily scope styles in components, eliminate dead code, encourage faster performance and dynamic styling, and more.
+
 Here are key features:
+  * Global namespace
+  * Style dependencies
+  * Dead code elimination
+  * Composition of styles
+  * Sharing constants
+
   * CSS-in-JS allows you to write CSS in JavaScript syntax
   * It takes advantage of native JS syntax features
   * Colocate styles with components
@@ -48,6 +55,12 @@ Here are key points to learn:
   * How CSS layout works
 
 ## Other Advantages of CSS-in-JS
+  * Global namespace
+  * Style dependencies
+  * Dead code elimination
+  * Composition of styles
+  * Sharing constants
+
   * Easy to pre-render important CSS
   * Supports dynamic styling
   * Styles are generally "scoped" to a specific component
